# pig_farm_project

./: .dockerignore  .env  .gitignore  .~lock.FarmOS_Database - Financials.csv#  Dockerfile  README.md  data.csv  docker-compose.yml  import-data.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0840c261e2b9_add_transport_to_category_enum.py  09c39f25bdc3_initial_master_schema.py  2d893f9d07dd_add_inventory_and_livestock_models.py  80f3a9751690_create_transaction_table.py  8892b0e30b8f_v2_accounting.py  b96a573e5ac4_upgrade_category_and_status_to_strict_.py  bfd38c6f8297_rename_table_to_farm_transactions.py  cf919fb46671_add_user_id_to_transaction.py  e403293e8e87_implement_farm_transaction_and_enums.py
backups/: farmos_backup_20260401_063229.sql
src/: backup.sh  create_admin.py  database.py  main.py  models.py  security.py
templates/: add_transaction.html  base.html  edit_transaction.html  homepage.html  index.html  ledger.html  login.html  profile.html  register.html  view_transaction.html
