[project]
name = "pig-farm-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.1",
    "pandas>=3.0.1",
    "psycopg[binary]>=3.3.3",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
]
